PROJECT(DICOMApp)


IF( BUILD_OUTSIDE_INSIGHT_APPLICATION )

  FIND_PACKAGE(ITK)
  IF(ITK_FOUND)
    INCLUDE(${ITK_USE_FILE})
  ELSE(ITK_FOUND)
    MESSAGE(FATAL_ERROR
            "Cannot build InsightApplications without ITK.  Please set ITK_DIR.")
  ENDIF(ITK_FOUND)

ENDIF( BUILD_OUTSIDE_INSIGHT_APPLICATION )


ADD_EXECUTABLE(DICOMApp main.cxx)
INSTALL_TARGETS(/bin DICOMApp)
TARGET_LINK_LIBRARIES(DICOMApp ITKIO)
